[tool.poetry]
name = "benchmark-python-ros-1"
version = "0.1.0"
description = "Basic ROS package benchmark with rospkg and requests"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "benchmark_python_ros_1"}]

[tool.poetry.dependencies]
python = "^3.8"
rospkg = "^1.5.0"
catkin-pkg = "^0.5.2"
requests = "2.31.0"
flask = "2.2.5"
pydantic = "1.10.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 