[project]
name = "benchmark-python-ros-1"
version = "0.1.0"
description = "Basic ROS package benchmark with rospkg and requests"
requires-python = ">=3.9"
dependencies = [
    "rospkg==1.5.0",
    "catkin-pkg==0.5.2",
    "requests==2.31.0",
    "flask==2.2.5",
    "pydantic==1.10.13",
    "beautifulsoup4==4.12.2",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "aiohttp==3.9.1",
    "toml==0.10.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 