[tool.poetry]
name = "benchmark-python-ros-2"
version = "0.1.0"
description = "ROS package benchmark with data science and ML dependencies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "benchmark_python_ros_2"}]

[tool.poetry.dependencies]
python = "^3.8"
rospkg = "^1.5.0"
catkin-pkg = "^0.5.2"
pandas = "^2.1.0"
numpy = "^1.23.5"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
torch = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pytest = "^7.4.0"
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 