[project]
name = "benchmark-python-ros-2"
version = "0.1.0"
description = "ROS package benchmark with data science and ML dependencies"
requires-python = ">=3.9,<3.12"
dependencies = [
    "rospkg==1.5.0",
    "catkin-pkg==0.5.2",
    "pandas==2.1.0",
    "numpy==1.24.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.0",
    "torch==2.1.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "pytest==7.4.0",
    "hypothesis==6.82.0",
    "pydantic==1.10.13",
    "packaging==25.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 